# library_api

./: .coverage  .dockerignore  .gitignore  Dockerfile  alembic.ini  config_test.json  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  server.py  test.db
alembic/: env.py
alembic/versions/: 1eca14145d85_init.py  271dc149ed01_remove_quantity_from_books.py  4e16db873168_readd_models.py  63b1176c5fff_.py  9a1a97fc052d_add_qtd_column.py  a988b6c1a91e_teste.py
app/: app.py  main.py
app/authors/: handlers.py  routes.py
app/books/: models.py  routes.py
app/crud/: authors.py  books.py  repository.py
app/database/: config.py  manager.py
app/handlers/: authors.py
app/interfaces/: repository.py
app/models/: __init__.py  authors.py  books.py
app/modules/authors/: crud.py  entities.py  handlers.py  models.py  routes.py  (+3 more)
app/routes/: authors.py  books.py
app/schemas/: authors.py  books.py
authors/: __init__.py  crud.py  models.py  routes.py  schemas.py
books/: crud.py  models.py  routes.py  schemas.py
crud/: __init__.py  author.py  book.py  decorators.py
database/: __init__.py  config.py  manager.py
routes/: author.py  book.py
tests/: factories.py
tests/authors/: test_authors.py  test_crud.py  test_routes.py
tests/books/: test_books.py  test_crud.py  test_routes.py
tests/crud/: test_authors.py  test_books.py
tests/database/: db.py  mock_config.py
tests/mocks/: author_mocks.py  book_mocks.py
tests/routes/: test_authors.py  test_books.py
tests/stubs/: author_stubs.py  book_stubs.py
(+8 files in other folders)
